tests/types/errors/lambda_block_body.mog
var bad fn(i32) i32 = fn(x i32) => {
  return x + 1
}
